# jokenpo-with-tests

./: README.md  setup.cfg  tox.ini
.github/workflows/: test_pipeline.yml
src/game/: main.py
tests/: test_game.py
